samples/_failures_safe/1761492427_3cd8ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7b6bb53.c: In function ‘main’:
./samples/SAFE/__tmp_d7b6bb53.c:151:5: error: expected expression at end of input
  151 |     print_buffer_hex(input_data,
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d7b6bb53.c:151:5: error: expected declaration or statement at end of input
